<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_500"
    android:layout_margin="10dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"

                android:contentDescription="@string/blank"
                android:paddingTop="10sp"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_360_title"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10sp"
                android:text="@string/choose_360_title_1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_1"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_2"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_3"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_4"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_5"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_6"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_7"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_8"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Research_and_Innovation_9"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_360_title_2"

                android:paddingVertical="10sp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Social_Development_And_Employment_1"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Social_Development_And_Employment_2"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Social_Development_And_Employment_3"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Social_Development_And_Employment_4"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Social_Development_And_Employment_5"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>