<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    android:layout_margin="10dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:contentDescription="@string/blank"
                android:paddingTop="10sp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/founder" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_title"
                android:layout_gravity="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_1"
                android:paddingBottom="10sp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_2"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_3"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_4"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_5"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_6"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_7"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_8"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_9"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_mission_10"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_vision_title"
                android:layout_gravity="center"
                android:paddingVertical="10sp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_vision"
                android:paddingHorizontal="10sp"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>