<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_200"
    android:layout_margin="10dp">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/founder"
                android:contentDescription="@string/blank"
                android:paddingTop="10sp"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_body_title"
                android:paddingVertical="10sp"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_body_1"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_body_2"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_body_3"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_body_4"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_title_1"
                android:paddingVertical="10sp"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_1"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_2"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_3"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_4"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_5"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_6"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_7"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_8"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_9"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/governing_body_title_2"
                android:textStyle="bold"
                android:paddingTop="10sp"
                android:paddingHorizontal="5sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>