<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:layout_margin="10dp">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/founder"
                android:layout_gravity="center"
                android:contentDescription="@string/blank"
                android:paddingTop="10sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_founder_1"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_founder_2"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_founder_3"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_founder_4"
                android:paddingHorizontal="10sp"
                android:paddingBottom="10sp"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_founder_5"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_founder_6"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_founder_7"
                android:paddingHorizontal="10sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>